--- a/app/scss/UI/owl-sliders.scss
+++ b/app/scss/UI/owl-sliders.scss
@@ -39,6 +39,10 @@
       @media (max-width: 640px) {
         width: 11px;
         height: 11px;
+        min-width: 11px;
+        min-height: 11px;
+        box-sizing: border-box;
+        padding: 0;
       }
     }
   }
